@@ -2,6 +2,7 @@ version 1.1-beta2 xx - 2011
 . [NEW] All: Code is compatible with ARC (issue #1199)
 . [NEW] TileMap: supports in-memory TMX map creation (issue #1239)
 . [FIX] TouchDispatcher: correctly handles addition and removal of handlers when being inside a touch handler (issue #1084, #1139)
+. [FIX-MAC] LabelTTF: word wrap works on Mac (issue #1074)
 
 version 1.1-beta 11-Oct-2011
 . [NEW] Animation: Added file format. AnimationCache can load animations from file
